--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 								</header>
 								<div class="content">
 									<div class="gallery">
-										<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/demoday.jpg" class="landscape"><img src="images/gallery/thumbs/demoday.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/pt2.jpg"><img src="images/gallery/thumbs/pt2.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/pt3.png"><img src="images/gallery/thumbs/pt3.png" alt="" /></a>
 									</div>
 								</div>
 							</section>
@@ -103,14 +103,12 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+										<h3>Stochastic Spiking Neural Network for handwritten digits recognition</h3>
+										<p>My final-year dissertation was a research project to extend the work published in <a href="https://arxiv.org/pdf/1710.10704.pdf">this paper</a>. The project was made open source after my graduation and the code is available <a href="https://github.com/LucaMozzo/SpikingNeuralNetwork">here.</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/snn.png" class="landscape"><img src="images/gallery/thumbs/snn.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -119,7 +117,7 @@
 					</section>
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Duis sed adpiscing veroeros amet</h2>
 						</header>
@@ -130,7 +128,7 @@
 								<li><a href="#" class="button large">Learn More</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Elements -->
 				<!--
@@ -444,7 +442,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									<span>Chelsea, London</span>
 								</li>
 								<li>
-									<h3>Elsewhere</h3>
+									<h3>Social</h3>
 									<ul class="icons">
 										<li><a href="https://www.instagram.com/mozzonazionale" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://linkedin.com/in/lucamozzo" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
